# fastapi-server-template

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: swagger.json  swagger.yaml
server/: app.py  main.py
server/dto/: ServerDTO.py
server/repository/: ServerRepo.py
server/routes/v1/: ServerRouter.py
server/services/: ServerService.py
server/settings/: settings.py
